# GraviSim

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Planet.cpp  Planet.hpp  PlanetConfig.cpp  PlanetConfig.hpp  PlanetManager.cpp  PlanetManager.hpp  Screen.cpp  Screen.hpp  main.cpp
ui/: MainWindow.ui  PlanetConfig.ui
